# emergence-phase-codes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  setup.py
data/: prc_tensor.npy  pulse_phase.npy  similarity_matrix.npy  validation_metrics.csv
emergence_phase_codes/: model.py  pca.py  task.py  training.py
emergence_phase_codes/animations/: output.py  pca.py  phase.py  utils.py
modularRNN/: analysis.py  model.py  pipeline.py  task.py  training.py
notebooks/: m3a_solution_space.ipynb  pca_animation.ipynb  phase_code_solution_m3a_task.ipynb  phase_code_summary_figure.ipynb  phase_response_curve.ipynb  solution_space_figure.ipynb
recurrent_networks_oscillate/: task.py  training.py
scripts/: Experiment with Animations.ipynb  Experiment with Plotly Animations.ipynb  Test CTRNNCell.ipynb  Test ModularArithmeticTask.ipynb  Test train_model.ipynb  dsa_pipeline.py  figure_pipeline.py  fixed_point_attractors.ipynb  generate_configs.py  launch_jobs.py  limit_cycle.ipynb  pipeline.py  training_pipeline.py
scripts/hyperparameter_search/: hyperparameter_setup.ipynb
scripts/hyperparameter_search_0/: hyperparameter.sh  hyperparameter_analysis.ipynb  hyperparameter_setup.ipynb
scripts/hyperparameter_search_1/: analysis_v1.ipynb  hyperparameter.sh  hyperparameter_setup.ipynb
scripts/hyperparameter_search_2/: analysis_v2.ipynb  hyperparameter.sh  hyperparameter_setup.ipynb
scripts/hyperparameter_search_3/: analysis_v3.ipynb  hyperparameter.sh  hyperparameter_setup.ipynb
tests/: test_task.py
(+6 files in other folders)
