[tool.poetry]
name = "emergence-phase-codes"
version = "0.1.0"
description = "Code for 'Emergence of phase codes in recurrent networks trained to perform modular arithmetic'"
authors = ["Keith T. Murray <murraykeith64@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ctrnn-jax = {git = "https://github.com/keith-murray/ctrnn-jax.git", rev = "48689cb"}
jupyterlab = "^4.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88